ffi/derive/tests/ui_fail/uninhabited_enum.rs
use iroha_ffi::FfiType;

/// Uninhabited enum
#[derive(FfiType)]
pub enum FfiStruct {}

fn main() {}
